# nfl-pickem

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  DEPLOY.md  Makefile  README.md  SECURITY.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
.clusterfuzzlite/: Dockerfile  build.sh  requirements.txt
.github/: dependabot.yml
.github/workflows/: cflite.yml  ci.yml  codeql.yml  release.yml  scorecard.yml
.semgrep/custom/: engine-echo.yaml  sql-injection.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/.basedpyright/: baseline.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_users_table.py  0003_simplify_users_table.py  0004_pick_em_data_model.py  0005_demo_state.py  0006_pick_user_cascade.py  0007_pick_edit_audit.py  0008_misc_pick_type.py  0009_game_odds_provider_id.py  0010_app_setting.py  0011_user_discord_avatar_hash.py  0012_admin_authorization_floor.py  0013_pick_edit_audit_user_cascade.py  0014_user_session_version.py  0015_week_window_notify_latches.py  0016_week_lines_frozen_notify_latch.py  0017_historical_game.py
backend/app/: bootstrap.py  celery_app.py  config.py  csrf.py  db.py  exception_handlers.py  exceptions.py  logging_config.py  main.py  models.py  tasks.py
backend/app/api/: admin.py  auth.py  calendar.py  config.py  current_week.py  deps.py  picks.py  proof.py  results.py  slate.py
backend/app/bot/: chat_personality.py  client.py  commentary.py  db_bridge.py  freeze_week_embed.py  game_final_embed.py  llm_client.py  misc_graded_embed.py  notifier.py  personality.py  qa.py  recap.py  team_emoji.py  week_recap_embed.py  window_embed.py
backend/app/bot/commands/: __init__.py  admin.py  mention_qa.py  register.py  reset_password.py
backend/app/demo/: __init__.py  anchor.py  driver.py  offset.py  oracle.py  run.py
backend/app/schemas/: admin.py  admin_picks.py  auth.py  calendar.py  config.py  current_week.py  picks.py  results.py  slate.py  types.py
backend/app/scoreboard/: demo.py  espn.py  port.py  types.py
backend/app/seeds/: admins.py  bot_picks.py  bots.py  demo.py  fixture_2025.py  historical_games.py  historical_gen.py  teams.py
backend/app/seeds/data/: bot_picks_2025.py  historical_games.csv  nfl_2025_regular_season.json
backend/app/services/: admin.py  admin_picks.py  app_settings.py  auth.py  espn_extra.py  freeze.py  ingest.py  live_odds.py  notifications.py  notifications_read.py  odds.py  pick_patterns.py  pick_submission.py  pick_validation.py  pick_window.py  ratings.py  refresh.py  scheduler.py  scoring.py  standings.py  storylines.py  weather.py
backend/fuzz/: __init__.py  _domain.py  pick_validation_fuzzer.py  pick_window_fuzzer.py  scoring_fuzzer.py
backend/scripts/: README.md  backfill_fixture_odds.py  gen_2025_fixture.py  run_pg_smoke.sh
backend/tests/: test_active_season.py  test_admin_api.py  test_admin_authorization_floor.py  test_admin_personality_api.py  test_admin_picks_api.py  test_admin_seed.py  test_admin_triggers_api.py  test_app_settings.py  test_backfill_fixture_odds.py  test_bootstrap.py  test_bot_client_intents.py  test_bot_notifier.py  test_bot_picks_dataset.py  test_bot_seed.py  test_calendar_api.py  test_change_password_api.py  test_chat_context.py  test_chat_personality.py  test_config_api.py  test_config_settings.py  test_csrf_middleware.py  test_current_week_api.py  test_demo_anchor.py  test_demo_driver.py  test_demo_offset.py  test_demo_seed.py  test_demo_source_seam.py  test_discord_avatar.py  test_espn_extra.py  test_freeze_week.py  test_freeze_week_embed.py  test_game_final_embed.py  test_gen_2025_fixture.py  test_historical_games_seed.py  test_import_fixture_2025.py  test_ingest_season.py  test_live_odds.py  test_llm_commentary.py  test_login_schema_bounds.py  test_logout_cookie_hygiene.py  (+39 more)
backend/tests/fixtures/: espn_news.json  espn_summary_injuries.json  open_meteo_forecast.json
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/auth/: AuthContext.tsx  RequireAdmin.tsx  RequireAuth.tsx  auth-context.ts  useAuth.ts
frontend/src/components/: AppShell.tsx  Avatar.tsx  ContextBar.tsx  DemoBanner.tsx  Header.tsx  WeekContext.tsx  useWeek.ts  week-context.ts
frontend/src/lib/: admin.ts  api.test.ts  api.ts  calendar.ts  config.ts  currentWeek.ts  datetime.test.ts  datetime.ts  picks.test.ts  picks.ts  results.ts  strings.test.ts  strings.ts  teamLogos.ts
frontend/src/pages/: AdminPage.tsx  CalendarPage.tsx  HelpPage.test.tsx  HelpPage.tsx  LoginPage.tsx  MyPicksPage.tsx  ProfilePage.test.tsx  ProfilePage.tsx  RulesPage.tsx  (+7 more)
(+4 files in other folders)
