[project]
name = "nfl-pickem-backend"
version = "1.1.7"
description = "FastAPI + Celery backend for NFL Pick'em"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "celery[redis]>=5.4",
    "redis>=5.2",
    # Provides the `watchmedo` CLI that wraps the dev worker for auto-restart on
    # code changes (Celery dropped its own --autoreload in v4). Shipped in the
    # shared image; the prod worker command runs celery directly and never uses it.
    "watchdog[watchmedo]>=4",
    "pydantic-settings>=2.7",
    # Discord bot + auth service layer (ported from the standalone bot)
    "discord.py>=2.5",
    "structlog>=25.5",
    "argon2-cffi>=25.1",
    "itsdangerous>=2.2",
    # Async HTTP client for the bot's best-effort local-LLM call (app.bot.llm_client).
    # Must be a runtime dep (not dev-only): the image installs `[project.dependencies]`
    # via `uv pip install --system .`, so a dev-group entry is absent at runtime.
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pip-audit>=2.10.1",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.basedpyright]
# Baseline-and-ratchet type gate (see .github/workflows/ci.yml typecheck job).
# "standard" is close to Pylance's default; strictness is raised later during paydown.
typeCheckingMode = "standard"
pythonVersion = "3.14"
# Only the hand-written code Zach edits — the same tree the editor flags.
include = ["app", "tests"]
# Keep the baseline focused/stable: skip autogenerated + non-source trees
# (basedpyright's own defaults like .venv still apply on top of these).
exclude = [
    "**/__pycache__",
    ".venv",
    "alembic/versions",
    "scripts",
]
# Resolve the same interpreter uv builds so imports/stubs match CI.
venvPath = "."
venv = ".venv"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["seeds/data/*.json"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"
